--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,13 +1,47 @@
-pip==9.0.1
+alabaster==0.7.10
+astroid==1.6.3
+attrs==18.1.0
+autopep8==1.3.5
+babel==2.5.3
+boto3==1.7.20
+botocore==1.10.20
 bumpversion==0.5.3
-wheel==0.29.0
-watchdog==0.8.3
-flake8==2.6.0
-tox==2.3.1
-coverage==4.1
-Sphinx==1.4.8
-cryptography==2.2.2
-PyYAML==3.11
-pytest==2.9.2
-pytest-runner==2.11.1
-autopep8==1.3.3
+certifi==2018.4.16
+chardet==3.0.4
+coverage==4.5.1
+docutils==0.14
+flake8==3.5.0
+idna==2.6
+imagesize==1.0.0
+isort==4.3.4
+jinja2==2.10
+jmespath==0.9.3
+lazy-object-proxy==1.3.1
+markupsafe==1.0
+mccabe==0.6.1
+more-itertools==4.1.0
+packaging==17.1
+placebo==0.8.1
+pluggy==0.6.0
+py==1.5.3
+pycodestyle==2.3.1
+pyflakes==1.6.0
+pygments==2.2.0
+pylint==1.8.4
+pyparsing==2.2.0
+pytest-cov==2.5.1
+pytest-pylint==0.9.0
+pytest-runner==4.2
+pytest==3.5.1
+python-dateutil==2.7.3; python_version >= '2.7'
+pytz==2018.4
+requests==2.18.4
+s3transfer==0.1.13
+six==1.11.0
+snowballstemmer==1.2.1
+sphinx==1.7.4
+sphinxcontrib-websupport==1.0.1
+tox==3.0.0
+urllib3==1.22
+virtualenv==15.2.0
+wrapt==1.10.11
