--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,7 @@ python:
   - 3.6
   - 2.7
 
-env:
-  - AWS_DEFAULT_REGION=us-east-1
-  - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-  - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+cache: pip
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
