--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ python =
 [testenv:flake8]
 basepython=python
 deps=flake8
-commands=flake8 botorum
+commands=flake8 --ignore E501 botorum
 
 [testenv]
 setenv =
