--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,10 @@ commands=flake8 --ignore E501 botorum
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+passenv =
+    AWS_DEFAULT_REGION
+    AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
