--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,47 +1,41 @@
-alabaster==0.7.10
-astroid==1.6.3
+alabaster==0.7.11
+atomicwrites==1.1.5
 attrs==18.1.0
 autopep8==1.3.5
-babel==2.5.3
-boto3==1.7.20
-botocore==1.10.20
+babel==2.6.0
 bumpversion==0.5.3
 certifi==2018.4.16
 chardet==3.0.4
 coverage==4.5.1
 docutils==0.14
 flake8==3.5.0
-idna==2.6
+idna==2.7
 imagesize==1.0.0
 isort==4.3.4
 jinja2==2.10
-jmespath==0.9.3
 lazy-object-proxy==1.3.1
 markupsafe==1.0
 mccabe==0.6.1
-more-itertools==4.1.0
+more-itertools==4.3.0
 packaging==17.1
-placebo==0.8.1
-pluggy==0.6.0
-py==1.5.3
+pluggy==0.7.1
+py==1.5.4
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pygments==2.2.0
-pylint==1.8.4
+pylint==1.9.3
 pyparsing==2.2.0
 pytest-cov==2.5.1
-pytest-pylint==0.9.0
+pytest-pylint==0.12.0
 pytest-runner==4.2
-pytest==3.5.1
-python-dateutil==2.7.3; python_version >= '2.7'
-pytz==2018.4
-requests==2.18.4
-s3transfer==0.1.13
+pytest==3.7.0
+pytz==2018.5
+requests==2.19.1
 six==1.11.0
 snowballstemmer==1.2.1
-sphinx==1.7.4
-sphinxcontrib-websupport==1.0.1
-tox==3.0.0
-urllib3==1.22
-virtualenv==15.2.0
+sphinx==1.7.6
+sphinxcontrib-websupport==1.1.0
+tox==3.1.2
+urllib3==1.23
+virtualenv==16.0.0
 wrapt==1.10.11
