--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -23,7 +23,8 @@ py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
 pygments==2.2.0
-pylint==2.1.1
+pylint==2.1.1; python_version >= '3.0'
+pylint==2.1.1; python_version == '2.7'
 pyparsing==2.3.0
 pytest-cov==2.6.0
 pytest-pylint==0.12.3
